Fixed bug were the images and format were not showing up after logging in.

--- a/Nitrouz_Studioz/src/main/resources/static/css/main.css
+++ b/Nitrouz_Studioz/src/main/resources/static/css/main.css
@@ -38,6 +38,10 @@ ul {
   background-color: #325658;
 }
 
+#profile_name {
+  color: aqua;
+}
+
 #loginLink, #logoutLink {
   float: right;
   padding-left: 1em;
